utils/deploy-argocd/base/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: argocd
  labels:
    name: argocd
